dashboard/app/assets/stylesheets/application.css.scss
/* ... */
.header_right {
  position: absolute;
  float: left;
  right: 25px;
  margin-top: 9px;
  @media screen and (max-width: 1150px) {
    margin-top: 5px;
  }
}

.freeplay_links {
  display: inline-block;
  text-align: center;
}

.header_user {
  display: inline-block;
  text-align: right;
  background-color: rgb(255, 164, 0);
  border-radius: 5px;
  padding: 7px 14px;
  margin-left: 5px;
  font-size: 14px;
  line-height: 20px;
  box-sizing: border-box;
  a:hover {
    text-decoration: none;
    background-color: rgb(255, 164, 0);
  }
}
.header_popup {
  position: absolute;
  top: auto;
  right: 0;
  left: 0;
  margin: 20px auto;
  width: 635px;
  border: 20px solid $bkgnd_color;
  border-top: 5px;
  border-bottom: 5px;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  z-index: 1050;
  background-color: white;
  overflow: hidden;
}

.header_popup_header {
  padding: 12px 15px;
  margin-bottom: 0;
  text-align: left;
  color: $header_text;
  background-color: $hdr_color;
  font-size: 22px;
  cursor: pointer;
}

.header_popup_body {
  position: relative;
  overflow-y: auto;
  display: block;
  min-height: 1100px;
  color: #333;

  .loading {
    height: 400px;
    margin: 20px;
    background: image-url("spinner-big.gif") no-repeat center center;
  }
}

.header_popup_footer {
  padding: 12px 15px;
  margin-bottom: 0;
  text-align: right;
  color: $header_text;
  background-color: $bkgnd_color;
  cursor: pointer;
}

.header_popup_link {
  min-width: 40px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  height: 26px;
  cursor: pointer;
}

.header_trophy_link {
  cursor: pointer;
}

.header_finished_link {
  display: inline-block;
  font-size: 16px;
}

.header_finished_link:hover {
  background-color: transparent;
  text-decoration: underline;
}

.header_popup_link:hover {
  background-color: transparent;
  text-decoration: none;
}

.header_popup_link_glyph {
  font-size: 22px;
  color: orange;
  line-height: 10px;
}

.header_popup_link_text {
  font-size: 10px;
  color: $header_text;
  display: inline-block;
  line-height: 20px;
}

.trophy_image {
  width: 45px;
  height: 45px;
}

#alert {
  color: red;
  font-size: 130%;
  border-style: solid;
  border-width: 2px;
  padding: 5px;
}

.modal-body {
  height: 100%;
  overflow: visible;
}

#blocklyApp {

  .loading {
    height: 520px;
    margin: 20px;
    background: image-url("spinner-big.gif") no-repeat center center;
  }

  .slow_load {
    display: none;
    text-align: center;
    position: relative;
    top: -230px;
  }

}

.reference_area {
  margin-top: 20px;

  .help_title {
    color: #1180be;
    font-family: 'Gotham 7r', sans-serif;
    font-weight: normal;
    font-size: 17.5px;
    display: inline-block;
  }

  .solution_link {
    font-size: 17.5px;
    padding-bottom: 4px;
  }

  .video_link {
    display: inline-block;
    margin: 6px;
  }

  .video_name {
    text-align: center;
    width: 183px;
  }

  .help_subtitle {
    display: inline-block;
  }
}

#notes-outer {
  overflow-y: scroll;
  padding: 0;
}
#notes {
  .note {
    padding-bottom: 10px;
    p {
      font-size: 20px;
      line-height: 24px;
      padding-right: 30px;
    }
    img {
      float: left;
      width: 450px;
      height: auto;
      padding-right: 30px;
    }
  }
}

// Tabs

.video-modal {
  .modal-body {
    padding: 0;
  }
  .ui-tabs-nav {
    background: $light_gray;

    li {
      border-top-right-radius: 4px;
      border-top-left-radius: 4px;

      a {
        background: $dark_color;
        color: white;
        &:hover {
          color: $light_green;
        }
        &:focus {
          outline: 0;
        }
      }
    }

    li.ui-state-active {
      a {
        background: white;
        color: $orange;
        &:hover {
          color: $orange;
        }
      }
    }
  }
}

@mixin close-button($cornerOffset) {
  $startWidth: 61px;
  $startHeight: 59px;
  $growth: 3px;
  $movement: 1px;

  position: absolute;
  cursor: pointer;
  z-index: 1;
  background: image-url("x_button.png") no-repeat center center;
  background-size: 100% auto;

  top: $cornerOffset;
  right: $cornerOffset;
  width: $startWidth;
  height: $startHeight;
  &:hover {
    top: $cornerOffset - $movement;
    right: $cornerOffset - $movement;
    width: $startWidth + $growth;
    height: $startHeight + $growth;
  }
}

.x-close {
  @include close-button($cornerOffset: -20px);
}

.qtip-content {
  font-size: 20px;
  line-height: 28px;
  color: #7E5BA0;
  font-family: 'Gotham 5r', sans-serif;
  font-weight: normal;
}

html[dir=rtl] .qtip-content {
  direction: rtl;
  text-align: right;
}

.qtip-default {
  background-color: #fff;
  color: #000;
  border: 1px solid #000;
  border-radius: 8px;
  box-shadow: 5px 5px 5px #888;
  padding: 10px;
}

.no-tip .qtip-tip {
  visibility: hidden;
}

.cdo-qtips {
  z-index: 1;


  .tooltip-x-close {
    @include close-button($cornerOffset: -35px);
  }
}

a.download-video {
  float: left;
  z-index: 1;
  cursor: pointer;
  width: 40px;
  height: 36px;
  &:hover {
    background: none;
  }
  img {
    width: 40px;
    height: 41px;
    margin-top: -3px;
    margin-bottom: -2px;
  }
  img:hover {
    width: 41px;
    height: 42px;
    margin-bottom: -3px;
  }
}

@mixin warning-banner {
  padding: 5px 20px;
  font-size: 28px;
  line-height: 32px;
  background-color: orange;
  text-align: center;
  color: white;
  a, a:visited {
    color: #08c;
  }
  a:hover {
    background: transparent;
  }
  p {
    padding: 7px 0;
    margin-bottom: 0;
  }
}

#warning-banner {
  @include warning-banner;
}

#warning-banner-chrome {
  @include warning-banner;
  color: white;
  font-size: 22px;
  line-height: 22px;
  margin-bottom: 5px;
  padding: 5px;
}

.quiet_links {
  a:link { font-family: 'Gotham 4r', sans-serif; font-weight: normal; }
}

.fixed_width_cell {
  white-space: nowrap;
  overflow: hidden;
  text-overflow:ellipsis;
  padding-left: 5px;
}
/* ... */

